# gal-panties

./: Cargo.toml  README.md  docker-compose.yml  xdpdump-with-ebpf.pcap
docker/: client.Dockerfile  server.Dockerfile
pilaf/: Cargo.toml
pilaf/src/: main.rs
shenron/: Cargo.toml
shenron/src/: main.rs
woolong/: Cargo.toml  build.rs
woolong-common/: Cargo.toml
woolong-common/src/: lib.rs
woolong-ebpf/: Cargo.toml
woolong-ebpf/src/: main.rs  rewrite_packet.rs
woolong/src/: main.rs
